# hermes-sage-memory

./: README.md  pyproject.toml
.github/workflows/: test.yml
docs/: API.md  architecture.md  roadmap.md
examples/: character_memory_demo.py  longterm_agent_demo.py  soul_demo.py
plugins/memory/sage_lite/: __init__.py
sage_memory/: __init__.py  adapter.py  evolution.py  graph_store.py  models.py  reader.py  token_utils.py  writer.py
tests/: test_e2e.py  test_evolution.py  test_integration.py  test_persistence.py  test_reader.py  test_token_utils.py  test_writer.py
